src/app.css
@import '@fontsource-variable/cormorant';

:root {
    --color-bg-light: #f4eadd;
    --color-fg-dark: #38322f;
        --color-text-light: #f5f3e7;
}

body {
    font-family: 'Cormorant', Georgia, 'Times New Roman', Times, serif;
    background-color: var(--color-bg-light);
    background-image: url(lib/bg.jpg);
    color: var(--color-fg-dark);
    background-attachment: fixed;
}

body,
button {
    font-family: 'Cormorant', Georgia, 'Times New Roman', Times, serif;
}
h1,
h2,
label,
p {
    color: var(--color-fg-dark);
}
.glass {
    padding: 4rem 2rem;
    margin-bottom: 1rem;
    margin: 0.8rem 1.2rem;
    backdrop-filter: blur(16px) saturate(120%);
    -webkit-backdrop-filter: blur(16px) saturate(120%);
    background-color: rgba(255, 255, 255, 0.2);
    border-radius: 12px;
    border: 1px solid rgba(209, 213, 219, 0.3);
}

/* Generated by https://generator.ui.glass/ */
.spotify-sveltekit-embed {
    height: 80px;
    width: 100%;
}

